--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lefan-keystone",
+  "name": "keystone",
   "version": "0.0.1",
   "description": "Web Application Framework and Admin GUI / Content Management System built on Express.js and Mongoose",
   "main": "index.js",
